--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
         include:
           - targetos: darwin
             arch: arm64
-    name: osmosis ${{ matrix.arch }} for ${{ matrix.targetos }}
+    name: mini ${{ matrix.arch }} for ${{ matrix.targetos }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3.2.0
@@ -20,7 +20,7 @@ jobs:
           GOOS: ${{ matrix.targetos }}
           GOARCH: ${{ matrix.arch }}
 
-      - name: Compile osmosis
+      - name: Compile mini
         run: |
           go mod download
           cd cmd/minid
