Allow multiple state changes per call (#19)
- Switch to a "parse proof" model of passing data, restructure groth16
- Fix tests and improve ECDSA circuit
- Better specify what state change proofs need to send
- Switch to "Sender" being the full sender address
- Fix ZHS assumption in scripts/init

--- a/x/zktx/Makefile
+++ b/x/zktx/Makefile
@@ -7,7 +7,11 @@ DOCKER := $(shell which docker)
 #################
 
 test:
-	@echo "--> Running tests"
+	@echo "--> Running tests (short)"
+	go test -v ./... --short
+
+test-long:
+	@echo "--> Running tests (all)"
 	go test -v ./...
 
 test-integration:
