--- a/x/zktx/proto/buf.gen.pulsar.yaml
+++ b/x/zktx/proto/buf.gen.pulsar.yaml
@@ -2,7 +2,7 @@ version: v1
 managed:
   enabled: true
   go_package_prefix:
-    default: github.com/hyle/hyle/zktx/api
+    default: github.com/hyle-org/hyle/zktx/api
     except:
       - buf.build/googleapis/googleapis
       - buf.build/cosmos/gogo-proto
