chore: add specific payload hashing for each scheme

--- a/verifiers/hyle-contract/Cargo.toml
+++ b/verifiers/hyle-contract/Cargo.toml
@@ -5,3 +5,4 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
+num = "0.4.3"
