fix: settle if all payloads are verified

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,9 @@
 [workspace]
+resolver = "2"
 members = [
+    "verifiers/hyle-contract",
+    "verifiers/midenvm-verifier",
+    "verifiers/risc0-verifier",
+    # "verifiers/sp1-verifier",
     "verifiers/cairo-verifier"
 ]
