Remove bigint from Hyle-Contract

--- a/verifiers/hyle-contract/Cargo.toml
+++ b/verifiers/hyle-contract/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "hyle_contract"
-version = "0.1.0"
-edition = "2021"
+    name = "hyle_contract"
+    version = "0.1.0"
+    edition = "2021"
 
 [dependencies]
-serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
-num = "0.4.3"
+    serde = { version = "1.0", default-features = false, features = [
+        "derive",
+        "alloc",
+    ] }
