fix: parsing success in cairo

--- a/verifiers/cairo-verifier/Cargo.toml
+++ b/verifiers/cairo-verifier/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.6", features = ["derive"] }
-cairo-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "e465d7c" }
+cairo-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "e465d7c", features = [ "parallel" ] }
 stark-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "e465d7c", features = [ "parallel" ] }
 lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "e465d7c" }
 bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git", features= ['serde'] }
