--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ tracing-subscriber = "0.3"
 tokio = { version = "1.40.0", features = ["full"] }
 anyhow = "1.0.86"
 clap = { version = "4.5.16", features = ["derive"] }
+rand = "0.8.5"
 
 [profile.release]
 lto = "thin"
