--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ tokio = { version = "1.40.0", features = ["full"] }
 anyhow = "1.0.86"
 clap = { version = "4.5.16", features = ["derive"] }
 rand = "0.8.5"
+bincode = "1.3.3"
+serde = { version = "1.0", features = ["derive"] }
 
 [profile.release]
 lto = "thin"
