--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0.209", features = ["derive"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 tokio = { version = "1.40.0", features = ["full"] }
 anyhow = "1.0.86"
 clap = { version = "4.5.16", features = ["derive"] }
 rand = "0.8.5"
+axum = "0.7.5"
 
 [profile.release]
 lto = "thin"
