--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ rand = "0.8.5"
 bincode = "1.3.3"
 serde = { version = "1.0", features = ["derive"] }
 ron = "0.8.1"
+axum = "0.7.5"
 
 [profile.release]
 lto = "thin"
