--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+config = "0.14.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 tokio = { version = "1.40.0", features = ["full"] }
