--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ bincode = "1.3.3"
 serde = { version = "1.0", features = ["derive"] }
 ron = "0.8.1"
 axum = "0.7.5"
+sha3 = "0.10.8"
+hex = "0.4.3"
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
