--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,11 @@ serde = { version = "1.0", features = ["derive"] }
 ron = "0.8.1"
 axum = "0.7.5"
 
+[dev-dependencies]
+assert_cmd = "2.0.16"
+reqwest = { version = "0.11", features = ["json", "blocking"] }
+serde_json = "1.0.128"
+
 [profile.release]
 lto = "thin"
 incremental = true
