--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ axum = "0.7.5"
 sha3 = "0.10.8"
 hex = "0.4.3"
 derive_more = { version ="1.0.0", features = ["display"] }
+futures = "0.3.30"
+tokio-util = { version = "0.7.12", features = ["codec"] }
+anymap = "0.12.1"
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
@@ -26,6 +29,7 @@ reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde_json = "1.0.128"
 proptest = "1.5.0"
 test-log = { version ="0.2.16", features = ["color", "trace"] }
+tokio-stream = "0.1.16"
 
 [profile.release]
 lto = "thin"
