--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ assert_cmd = "2.0.16"
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde_json = "1.0.128"
 proptest = "1.5.0"
+test-log = { version ="0.2.16", features = ["color", "trace"] }
 
 [profile.release]
 lto = "thin"
