✨ Node state datamodel (#79)
* ✨ Node state

* some empty functions

* Implement handle blob tx

* check next tx to settle

* ✅ Add tests on OrderedTxMap

* update timeouts

* hash BlobTransaction

* better impl after review

* 🚨 fix compile

* implement Timeouts

* clear timeouts

* ✨ handle register contract & settle transaction

* ✅ & ✨ Settle tx & add test

* ♻️  Updates after review

* ♻️  Move HyleOuput to VerificationStatus::Success

* ♻️  better usage of anyhow

* ♻️  Introduce StateDigest type

* ♻️  BlobData

* 🚚 rename to blob_tx_hash

* ✨ real implementation of blobs_hash

* 🍻 fix doublon

* 🍻 wrong doublon removed

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,14 @@ ron = "0.8.1"
 axum = "0.7.5"
 sha3 = "0.10.8"
 hex = "0.4.3"
+derive_more = { version ="1.0.0", features = ["display"] }
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 serde_json = "1.0.128"
+proptest = "1.5.0"
+test-log = { version ="0.2.16", features = ["color", "trace"] }
 
 [profile.release]
 lto = "thin"
