--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ cairo-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks.git"
 stark-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "e465d7c" }
 console-subscriber = "0.4.0"
 bloomfilter = "1.0.14"
+paste = "1.0.15"
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
