--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ derive_more = { version = "1.0.0", features = ["display"] }
 anymap = "0.12.1"
 cairo-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "e465d7c" }
 stark-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "e465d7c" }
+bloomfilter = "1.0.14"
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
