Don't run clippy CI on draft PRs

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -12,6 +12,7 @@ permissions:
 jobs:
   clippy:
       name: clippy check
+      if: github.event.pull_request.draft == false
       runs-on: ubuntu-latest
       steps:
           - uses: actions/checkout@v4
