--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ anymap = "0.12.1"
 cairo-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "e465d7c" }
 stark-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "e465d7c" }
 console-subscriber = "0.4.0"
+bloomfilter = "1.0.14"
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
