--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,10 @@ bloomfilter = "1.0.14"
 paste = "1.0.15"
 blst = "0.3.13"
 nocow = { path = "./nocow" }
+# opentelemetry and axum-otel-metrics must be updated together (so that there is only one opentelemetry version)
+opentelemetry = "0.24.0"
+axum-otel-metrics = "0.9.0-alpha.2"
+tower-http = {version = "0.6.0", features=["trace"]}
 
 [target.'cfg(target_os="macos")'.dependencies]
 sled = { version = "0.34.7", features = ["compression", "lock_free_delays"] }
