--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ assert_cmd = "2.0.16"
 reqwest = { version = "0.12", features = ["json", "blocking"] }
 serde_json = "1.0.128"
 proptest = "1.5.0"
-test-log = { version = "0.2.16", features = ["color", "trace"] }
+test-log = { version = "0.2.16", features = ["color", "trace"], default-features = false }
 tokio-stream = "0.1.16"
 
 [profile.release]
