--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ nocow = { path = "./nocow" }
 opentelemetry = "0.25.0"
 axum-otel-metrics = "0.9.0-alpha.2"
 tower-http = {version = "0.6.1", features=["trace"]}
+futures = "0.3.30"
 
 [target.'cfg(target_os="macos")'.dependencies]
 sled = { version = "0.34.7", features = ["compression", "lock_free_delays"] }
