--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ nocow = { path = "./nocow" }
 opentelemetry = "0.25.0"
 axum-otel-metrics = "0.9.0-alpha.2"
 tower-http = {version = "0.6.1", features=["trace"]}
+futures = "0.3.30"
 
 [target.'cfg(target_os="macos")'.dependencies]
 sled = { version = "0.34.7", features = ["compression", "lock_free_delays"] }
@@ -43,7 +44,7 @@ assert_cmd = "2.0.16"
 reqwest = { version = "0.12", features = ["json", "blocking"] }
 serde_json = "1.0.128"
 proptest = "1.5.0"
-test-log = { version = "0.2.16", features = ["color", "trace"] }
+test-log = { version = "0.2.16", features = ["color", "trace"], default-features = false }
 tokio-stream = "0.1.16"
 
 [profile.release]
