--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ serde_json = "1.0.128"
 proptest = "1.5.0"
 test-log = { version = "0.2.16", features = ["color", "trace"], default-features = false }
 tokio-stream = "0.1.16"
+tempdir = "0.3.7"
 
 [profile.release]
 lto = "thin"
