--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ clap = { version = "4.5.18", features = ["derive"] }
 rand = "0.8.5"
 bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git" }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1"
 ron = "0.8.1"
 axum = "0.7.6"
 sha3 = "0.10.8"
@@ -33,6 +34,7 @@ axum-otel-metrics = "0.9.0-alpha.2"
 tower-http = { version = "0.6.1", features = ["trace", "cors"] }
 futures = "0.3.30"
 dhat = { version = "0.3.3", optional = true }
+reqwest = { version = "0.12", features = ["json"] }
 
 [target.'cfg(target_os="macos")'.dependencies]
 sled = { version = "0.34.7", features = ["compression", "lock_free_delays"] }
