--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,13 +4,14 @@ repos:
     hooks:
       - id: fmt
       - id: clippy
-        args: [
+        args:
+          [
             "--workspace",
             "--all-targets",
             "--all-features",
             "--",
-            #! "-D",
-            #! "warnings",
+            "-D",
+            "warnings",
           ]
       - id: cargo-check
         args: ["--workspace", "--all-targets", "--all-features"]
