--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ tower-http = { version = "0.6.1", features = ["trace", "cors"] }
 futures = "0.3.30"
 dhat = { version = "0.3.3", optional = true }
 reqwest = { version = "0.12", features = ["json"] }
+tokio-util = "0.7.12"
 
 [target.'cfg(target_os="macos")'.dependencies]
 sled = { version = "0.34.7", features = ["compression", "lock_free_delays"] }
