--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ futures = "0.3.30"
 dhat = { version = "0.3.3", optional = true }
 reqwest = { version = "0.12", features = ["json"] }
 tokio-util = "0.7.12"
+assertables = "8.12.0"
 
 [target.'cfg(target_os="macos")'.dependencies]
 sled = { version = "0.34.7", features = ["compression", "lock_free_delays"] }
