--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,8 +10,8 @@ repos:
             "--all-targets",
             "--all-features",
             "--",
-            "-D",
-            "warnings",
+            # "-D",
+            # "warnings",
           ]
       - id: cargo-check
         args: ["--workspace", "--all-targets", "--all-features"]
