--- a/tools/observability/prometheus.yml
+++ b/tools/observability/prometheus.yml
@@ -4,7 +4,7 @@ global:
 scrape_configs:
   - job_name: 'local-metrics'
     metrics_path: "/v1/metrics"
-    scrape_interval: 5s  # Intervalle spécifique pour ce job
+    scrape_interval: 1s  # Intervalle spécifique pour ce job
     static_configs:
-      - targets: ["localhost:4321"]
+      - targets: ["localhost:4001", "localhost:4002", "localhost:4003"]
 
