--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,11 @@ name: Cargo Build & Test
 
 on:
   push:
-    branches: 
+    branches:
       - main
   pull_request:
 
-env: 
+env:
   CARGO_TERM_COLOR: always
 
 jobs:
@@ -19,6 +19,15 @@ jobs:
           - stable
           # - beta
           # - nightly
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: postgres
+        ports:
+          - 5432:5432
     steps:
       - uses: actions/checkout@v4
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
@@ -27,5 +36,3 @@ jobs:
             save-if: ${{ github.ref == 'refs/heads/main' }}
       - run: cargo build --verbose
       - run: cargo test --verbose
-  
-
