--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -1,8 +1,8 @@
-name: 'clippy'
+name: "clippy"
 
 on:
   pull_request:
-    paths: ['**/*.rs']
+    paths: ["**/*.rs"]
 
 permissions:
   contents: read
@@ -11,16 +11,27 @@ permissions:
 
 jobs:
   clippy:
-      name: clippy check
-      if: github.event.pull_request.draft == false
-      runs-on: ubuntu-latest
-      steps:
-          - uses: actions/checkout@v4
-          - uses: actions-rs/toolchain@v1
-            with:
-                toolchain: stable 
-                components: clippy
-                override: true
-          - uses: LoliGothick/clippy-check@master
-            with:
-                token: ${{ secrets.GITHUB_TOKEN }}
+    name: clippy check
+    if: github.event.pull_request.draft == false
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: postgres
+        ports:
+          - 5432:5432
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          components: clippy
+          override: true
+      - run: cargo install sqlx-cli
+      - run: sqlx migrate run --database-url "postgres://postgres:password@localhost:5432/postgres" --source ./src/indexer/migrations
+      - uses: LoliGothick/clippy-check@master
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
