feat: integrate sqlx to indexer (#188)
* feat: setup sqlx to indexer and add tests

* chore: remove inner from transaction

* fix: tests

* feat: populate db when handling new block

* chore: change path for migrations files

* chore: remove block_number from contract_state table

* chore: fix hash size in DB + enum in DB

* feat: add pg timestamp type in block

* fix: ci

* fix: dockerfile

* chore: add .sqlx for offline dbcheck

* feat: add macro over query and query! (no ENUM)

* feat: add ENUM for pg

* wip: adapt macro

* chore: remove sqlx macro

* feat: embed migations files in binary

* chore: remove useless code

* chore: normalize i64 usage

* chore: safely cast to i64

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,11 @@ name: Cargo Build & Test
 
 on:
   push:
-    branches: 
+    branches:
       - main
   pull_request:
 
-env: 
+env:
   CARGO_TERM_COLOR: always
 
 jobs:
@@ -19,13 +19,20 @@ jobs:
           - stable
           # - beta
           # - nightly
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: postgres
+        ports:
+          - 5432:5432
     steps:
       - uses: actions/checkout@v4
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
       - uses: Swatinem/rust-cache@v2
         with:
-            save-if: ${{ github.ref == 'refs/heads/main' }}
+          save-if: ${{ github.ref == 'refs/heads/main' }}
       - run: cargo build --verbose
-      - run: cargo test --verbose
-  
-
+      - run: DATABASE_URL="postgres://postgres:password@localhost:5432/postgres" cargo test --verbose
