--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,6 @@ console-subscriber = "0.4.0"
 bloomfilter = "1.0.14"
 paste = "1.0.15"
 blst = "0.3.13"
-nocow = { path = "./nocow" }
 # opentelemetry and axum-otel-metrics must be updated together (so that there is only one opentelemetry version)
 opentelemetry = "0.24.0"
 axum-otel-metrics = "0.9.0-alpha.2"
@@ -39,6 +38,15 @@ tokio-util = "0.7.12"
 assertables = "8.18.0"
 risc0-zkvm = { version = "1.1.1" }
 borsh = "1.5.1"
+# tokio (no TLS)
+sqlx = { version = "0.8.2", features = [
+    "runtime-tokio",
+    "postgres",
+    "migrate",
+    "chrono",
+] }
+chrono = { version = "0.4", features = ["serde"] }
+axum-test = "16.2.0"
 syn = "2.0.79"
 quote = "1.0.37"
 
