✅ Update index test to use embedded pg container (#200)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ axum-test = "16.2.0"
 syn = "2.0.79"
 quote = "1.0.37"
 bytes = "1.7.2"
+testcontainers-modules = { version = "0.11.2", features = ["postgres"] }
 
 [target.'cfg(target_os="macos")'.dependencies]
 sled = { version = "0.34.7", features = ["compression", "lock_free_delays"] }
