--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ default-run = "node"
 [dependencies]
 config = "0.14.0"
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["json"] }
 tokio = { version = "1.40.0", features = ["full", "tracing"] }
 anyhow = "1.0.89"
 clap = { version = "4.5.20", features = ["derive"] }
@@ -50,7 +50,6 @@ axum-test = "16.2.0"
 syn = "2.0.79"
 quote = "1.0.37"
 bytes = "1.7.2"
-testcontainers-modules = { version = "0.11.2", features = ["postgres"] }
 
 [target.'cfg(target_os="macos")'.dependencies]
 sled = { version = "0.34.7", features = ["compression", "lock_free_delays"] }
