--- a/tools/docker-compose.yml
+++ b/tools/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     environment:
       - HYLE_ID=node-1
       - HYLE_REST=localhost:4001
-      - HYLE_PORT=1001
-      - HYLE_CONSENSUS_SLOT_DURATION=3
+      - HYLE_HOST=localhost:1001
+      - HYLE_CONSENSUS__SLOT_DURATION=3
   hyle2:
     build: ./..
     privileged: true
@@ -19,8 +19,8 @@ services:
       - HYLE_ID=hyle2
       - HYLE_PEERS=localhost:1001
       - HYLE_REST=localhost:4002
-      - HYLE_PORT=1002
-      - HYLE_CONSENSUS_SLOT_DURATION=3
+      - HYLE_HOST=localhost:1002
+      - HYLE_CONSENSUS__SLOT_DURATION=3
     network_mode: host
     depends_on:
       - hyle1
@@ -33,20 +33,20 @@ services:
       - HYLE_ID=hyle3
       - HYLE_PEERS=localhost:1001
       - HYLE_REST=localhost:4003
-      - HYLE_PORT=1003
-      - HYLE_CONSENSUS_SLOT_DURATION=3
+      - HYLE_HOST=localhost:1003
+      - HYLE_CONSENSUS__SLOT_DURATION=3
     network_mode: host
     depends_on:
       - hyle1
-      
+
   prometheus:
     image: prom/prometheus:latest
     volumes:
       - ./observability/prometheus.yml:/etc/prometheus/prometheus.yml
     command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
+      - "--config.file=/etc/prometheus/prometheus.yml"
     ports:
-      - "9090:9090"  # Port pour accéder à l'interface de Prometheus
+      - "9090:9090" # Port pour accéder à l'interface de Prometheus
     network_mode: host
     depends_on:
       - hyle1
@@ -56,11 +56,11 @@ services:
   grafana:
     image: grafana/grafana:latest
     ports:
-      - "3000:3000"  # Port pour accéder à l'interface de Grafana
+      - "3000:3000" # Port pour accéder à l'interface de Grafana
     environment:
       - GF_SECURITY_ALLOW_ANONYMOUS_ACCESS=true
     volumes:
-      - ./observability/grafana-datasources:/etc/grafana/provisioning/datasources  # Montée de volume pour la source de données
+      - ./observability/grafana-datasources:/etc/grafana/provisioning/datasources # Montée de volume pour la source de données
     network_mode: host
     depends_on:
       - prometheus
