Treat clippy warnings as errors

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -23,4 +23,5 @@ jobs:
           override: true
       - uses: LoliGothick/clippy-check@master
         with:
+          deny: warnings
           token: ${{ secrets.GITHUB_TOKEN }}
