--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ chrono = { version = "0.4", features = ["serde"] }
 axum-test = "16.2.0"
 syn = "2.0.79"
 quote = "1.0.37"
+base64 = "0.22.1"
 bytes = "1.7.2"
 strum = "0.26.3"
 strum_macros = "0.26.4"
