--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 default-run = "node"
 
 [dependencies]
-sdk = { path = "./sdk"}
+hyle-contract-sdk = { path = "./contract-sdk"}
 config = "0.14.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json"] }
