--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.c
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 ron = "0.8.1"
-axum = "0.7.7"
+tokio-tungstenite = "0.24.0"
+axum = { version = "0.7.7", features = ["ws"] }
 sha3 = "0.10.8"
 hex = "0.4.3"
 derive_more = { version = "1.0.0", features = ["display"] }
