--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.c
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 ron = "0.8.1"
-axum = "0.7.7"
+axum = { version = "0.7.7", features = ["ws"] }
 sha3 = "0.10.8"
 hex = "0.4.3"
 derive_more = { version = "1.0.0", features = ["display"] }
@@ -50,6 +50,7 @@ chrono = { version = "0.4", features = ["serde"] }
 axum-test = "16.2.0"
 syn = "2.0.82"
 quote = "1.0.37"
+base64 = "0.22.1"
 bytes = "1.7.2"
 strum = "0.26.3"
 strum_macros = "0.26.4"
@@ -66,6 +67,7 @@ sled = { version = "0.34.7", features = [
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
+tokio-tungstenite = "0.24.0"
 reqwest = { version = "0.12", features = ["json", "blocking"] }
 serde_json = "1.0.132"
 proptest = "1.5.0"
