--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         # with:
         #   save-if: ${{ github.ref == 'refs/heads/main' }}
       - name: Generate code coverage
-        run: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info -- --test-threads=1
+        run: cargo llvm-cov --all-features --workspace --ignore-run-fail --lcov --output-path lcov.info -- --test-threads=1
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
