--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,25 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build_and_test:
-    name: Rust project - latest
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        toolchain:
+          - stable
+          # - beta
+          # - nightly
+    steps:
+      - uses: actions/checkout@v4
+      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - uses: Swatinem/rust-cache@v2
+        with:
+          save-if: ${{ github.ref == 'refs/heads/main' }}
+      - run: cargo build --verbose
+      - run: cargo test --verbose
+  coverage:
+    name: Coverage
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -25,8 +42,8 @@ jobs:
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
       - uses: Swatinem/rust-cache@v2
-        # with:
-        #   save-if: ${{ github.ref == 'refs/heads/main' }}
+        with:
+          save-if: ${{ github.ref == 'refs/heads/main' }}
       - name: Generate code coverage
         run: cargo llvm-cov --all-features --workspace --ignore-run-fail --lcov --output-path lcov.info -- --test-threads=1
       - name: Upload coverage to Codecov
