✨ Add prover binary to automatically proove blobs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ default-run = "node"
 
 [dependencies]
 hyle-contract-sdk = { path = "./contract-sdk"}
+hyllar = { path = "./contracts/hyllar/contract" }
+hydentity = { path = "./contracts/hydentity/contract" }
 config = "0.14.1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json"] }
