--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 default-run = "node"
 
 [dependencies]
-hyle-contract-sdk = { path = "./contract-sdk"}
+hyle-contract-sdk = { path = "./contract-sdk" }
 config = "0.14.1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json"] }
@@ -28,6 +28,7 @@ console-subscriber = "0.4.1"
 bloomfilter = "2.0.0"
 paste = "1.0.15"
 blst = "0.3.13"
+bb_rs = { path = "../aztec-packages/barretenberg/bb_rs" }
 # opentelemetry and axum-otel-metrics must be updated together (so that there is only one opentelemetry version)
 opentelemetry = "0.24.0"
 axum-otel-metrics = "0.9.0-alpha.2"
