✨ First ERC20 & Identity Smart Contracts (#287)
* ✨ Smart contracts

* 🚧 remove hyfi, new hydentity, rework hyrun

* 🚧

* ✨ Add prover binary to automatically proove blobs

* fix hyled commands

* new hydentity contract with private inputs

* update contracts readme

* ✅add tests

* run ci test on workspace

* ✅ More tests

* 🗑️ Remove prover

* fix tests not running

* ✅ add e2e test

* ⚰️ remove staking dead code for now

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           save-if: ${{ github.ref == 'refs/heads/main' }}
       - run: cargo build --verbose
-      - run: cargo nextest run --profile ci
+      - run: cargo nextest run --profile ci --workspace
       - name: Upload test results to Codecov
         if: ${{ !cancelled() }}
         uses: codecov/test-results-action@v1
