--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -1,3 +1,28 @@
 github_checks:
   # Disable annotations, too noisy.
   annotations: false
+
+coverage:
+  status:
+    patch:
+      default:
+        target: auto
+        threshold: 20%
+
+    project:
+      default: false
+      sdk:
+        target: auto
+        threshold: 10%
+        paths: 
+          - "contract-sdk"
+      contracts:
+        target: auto
+        threshold: 10%
+        paths: 
+          - "contracts/"
+      src:
+        paths: 
+          - "src/"  
+        target: auto
+        threshold: 10%
