--- a/contracts/hydentity/contract/Cargo.toml
+++ b/contracts/hydentity/contract/Cargo.toml
@@ -10,6 +10,6 @@ serde = { version = "1.0", default-features = false, features = [
     "alloc",
 ] }
 anyhow = "1.0.89"
-sha3 = "0.10.8"
+sha2 = {git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0"}
 bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git" }
 hex = "0.4.3"
