--- a/contracts/hyrun/Cargo.toml
+++ b/contracts/hyrun/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sdk = { path = "../../contract-sdk", package="hyle-contract-sdk" }
+sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk" }
 hydentity = { path = "../hydentity/contract" }
 # hystake = { path = "../hystake/contract" }
 hyllar = { path = "../hyllar/contract" }
+amm = { path = "../amm/contract" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 risc0-zkvm = { version = "1.1.3" }
 env_logger = "0.11.5"
