--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -25,3 +25,4 @@ jobs:
         with:
           deny: warnings
           token: ${{ secrets.GITHUB_TOKEN }}
+        options: ["--all-targets", "--all-features"]
